<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".NewMeasure">

    <TextView
        android:id="@+id/time"
        android:layout_width="309dp"
        android:layout_height="36dp"
        android:layout_marginTop="36dp"
        android:text="TIME"
        android:textColor="#D50B12"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/diastolic"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:hint="DIASTOLIC"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/systolic" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="163dp"
        android:layout_height="87dp"
        android:background="@drawable/home1"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="103dp"
        android:layout_height="144dp"
        android:background="@drawable/home2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="309dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:text="DATE"
        android:textColor="#D50B12"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/systolic"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:hint="SYSTOLIC"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/button3"
        android:layout_width="141dp"
        android:layout_height="55dp"
        android:layout_marginTop="48dp"
        android:background=" #387A583A"
        android:text="SUBMIT"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pulse"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="@+id/pulse"
        app:layout_constraintTop_toBottomOf="@+id/pulse"
        app:layout_constraintVertical_bias="0.0" />

    <EditText

        android:id="@+id/pulse"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:hint="PULSE"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diastolic" />

</androidx.constraintlayout.widget.ConstraintLayout>